# Obsidian-Edge

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  build_cached.sh  build_fresh.sh  deb_dep.txt
.cache/clangd/index/: Application.cpp.2862D82E4B844DDC.idx  Application.h.00AAF59161C7E8BA.idx  Core.h.0179B2A7B458F7F0.idx  DataStructure.h.D038157CD4CCB34F.idx  EntryPoint.h.B86B57FBC075AA6F.idx  Event.h.FAA9C62B676F58BC.idx  Logger.cpp.24CC324757EB52DA.idx  Logger.h.EF6423E2D340441B.idx  ObsidianEdge.h.DCC16D8C09DC795E.idx  PCH.h.8263405712D9A5DF.idx  SandBox.cpp.96961AAEF6F5F400.idx  Vector2.cpp.DD31D42C5A5C9246.idx  Vector2.h.1E85F34C5BEC7443.idx  Vector2i.cpp.112794415EEB70DA.idx  Vector2i.h.313AE0E87125376E.idx  ansicolor_sink-inl.h.C4926201E83DB306.idx  ansicolor_sink.h.ED0D1FE61F8D49A4.idx  async.cpp.4D3500B992E825F1.idx  async.h.C3EC4F65DDACBEF0.idx  async_logger-inl.h.C3FA23ECC01D0B5C.idx  async_logger.h.F515837EC3532FF8.idx  backtracer-inl.h.FB07D9DECCDE0434.idx  backtracer.h.71A80457311F7AB0.idx  base_sink-inl.h.715DBDA0A7AA5286.idx  base_sink.h.C37F1AB3C48AEC50.idx  basic_file_sink-inl.h.EAB5AC978AB7476B.idx  basic_file_sink.h.26F4D75794A9ECDF.idx  bundled_fmtlib_format.cpp.9D270E3F761376BD.idx  cfg.cpp.E56D2BC78DCE0B9F.idx  circular_q.h.A52D3DF5884B39A2.idx  color_sinks.cpp.7502DBAE1A2E8E5A.idx  common-inl.h.A9140DE48F716D25.idx  common.h.42C64E0C289B5AC4.idx  console_globals.h.CF3BEB98E9E70A69.idx  context.c.3EB5CEB3E456A05F.idx  core.h.D6DC7099951032F7.idx  egl_context.c.A3DE4584B23B3A23.idx  file_helper-inl.h.EC653EF0BB43CD11.idx  file_helper.h.21F0F3D1C9ADBD1B.idx  file_sinks.cpp.51F32153E1C72A5E.idx  (+79 more)
source/ObsidianEdge/: CMakeLists.txt
source/ObsidianEdge/include/: Core.h  EntryPoint.h  ObsidianEdge.h  PCH.h
source/ObsidianEdge/include/Engine/: Application.h  Logger.h  ObsidianEdge.h
source/ObsidianEdge/include/Engine/Core/: Application.h  Core.h  InputCodes.h  Logger.h  PCH.h  Window.h
source/ObsidianEdge/include/Engine/Events/: AListInputName.txt  ApplicationEvent.h  Event.h  KeyEvent.h  KeyboardEvent.h  MouseEvent.h
source/ObsidianEdge/include/Engine/Platform/: LinuxWindow.h  WindowsWindow.h
source/ObsidianEdge/include/Engine/Tests/: DataStructure.h
source/ObsidianEdge/include/Logger/: Logger.h
source/ObsidianEdge/include/Utility/: Array.h  List.h  String.h  Vector2.h  Vector2i.h
source/ObsidianEdge/source/Engine/: Application.cpp  Logger.cpp  ObsidianEdge.cpp
source/ObsidianEdge/source/Engine/Core/: Application.cpp  Logger.cpp  Window.cpp
source/ObsidianEdge/source/Engine/Platform/: LinuxWindow.cpp  WindowsWindow.cpp
source/ObsidianEdge/source/Logger/: Logger.cpp
source/ObsidianEdge/source/Utility/: Vector2.cpp  Vector2i.cpp
source/SandBox/: CMakeLists.txt  SandBox.cpp
test/: main_test.cpp  utility_test.cpp
utility/: LinkedList.h  README.md
